--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,14 @@
 ---
-name: Tails Azimuth
+name: Abbeey
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+occupation: AI Prompt Engineer & Blockchain Enthusiast
+company: Abbeey Labs
+email: abbeeypadang7@gmail.com
+twitter: https://x.com/Bey_id
+linkedin: https://www.linkedin.com/in/abbeey/
+github: https://github.com/doelsumbing87
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+Since 2017, Abbeey, a crypto enthusiast and AI prompt tinkerer, has been involved in the blockchain space.  He spends his time creating, writing, and sometimes memeing about the internet's future since he has a talent for deciphering tech trends and making AI reasoning simpler.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+ He founded Abbeey Labs as a private concept laboratory that combined digital innovation, blockchain trials, and quick engineering.  Off-screen?  He's likely to be debugging prompts or drinking a strong cup of coffee while thinking about the next bull run.
