--- a/data/blog/ai-blockchain-future.mdx
+++ b/data/blog/ai-blockchain-future.mdx
@@ -7,10 +7,17 @@ draft: false
 summary: 'Explore how AI prompt engineering and blockchain are converging to redefine automation, security, and digital trust. Insights from Abbeey Labs on the synergy powering the decentralized future.'
 images: ['/static/images/twitter-card.png']
 authors: ['default']
-layout: PostLayout
 ---
 
-![Abbeey Labs Banner](/static/images/twitter-card.png)
+import Image from '@/components/Image'
+import AbbeeyBanner from '/public/static/images/twitter-card.png'
+
+<Image
+  src={AbbeeyBanner}
+  alt="Abbeey Labs Banner"
+  width={1200}
+  height={630}
+/>
 
 # AI Prompt Engineering and Blockchain: The Future of Decentralized Intelligence
 
