--- a/data/blog/ai-blockchain-future.mdx
+++ b/data/blog/ai-blockchain-future.mdx
@@ -10,10 +10,9 @@ authors: ['default']
 ---
 
 import Image from '@/components/Image'
-import AbbeeyBanner from '/public/static/images/twitter-card.png'
 
 <Image
-  src={AbbeeyBanner}
+  src="/static/images/twitter-card.png"
   alt="Abbeey Labs Banner"
   width={1200}
   height={630}
