--- a/data/blog/ai-blockchain-future.mdx
+++ b/data/blog/ai-blockchain-future.mdx
@@ -1,15 +1,15 @@
 ---
-title: 'AI Prompt Engineering and Blockchain: The Future of Decentralized Intelligence'
-date: '2025-07-15'
-lastmod: '2025-07-15'
-tags: ['AI', 'Prompt Engineering', 'Blockchain', 'Crypto', 'Web3']
+title: "AI Prompt Engineering and Blockchain: The Future of Decentralized Intelligence"
+date: "2025-07-15"
+lastmod: "2025-07-15"
+tags: ["AI", "Prompt Engineering", "Blockchain", "Crypto", "Web3"]
 draft: false
-summary: 'Explore how AI prompt engineering and blockchain are converging to redefine automation, security, and digital trust. Insights from Abbeey Labs on the synergy powering the decentralized future.'
-images: ['/static/images/twitter-card.png']
-authors: ['default']
+summary: "Explore how AI prompt engineering and blockchain are converging to redefine automation, security, and digital trust. Insights from Abbeey Labs on the synergy powering the decentralized future."
+images: ["/static/images/twitter-card.png"]
+authors: ["default"]
 ---
 
-import Image from '@/components/Image'
+import Image from 'next/image'
 
 <Image
   src="/static/images/twitter-card.png"
